--- a/exo3.html
+++ b/exo3.html
@@ -6,16 +6,13 @@
   </head>
   <body>
     <h1>Ma liste de course du 7 Mai 2016</h1>
-    il me faut plusieurs choses :
-    <ul>
-        <li>une baguette</li>
-        <li>  deux <span class=blue>kilos<span> de tomates</li>
-        <li>3 litres de lait</li>
-        <li>5 boites de chewing gum</li></br>
-    <ul>
-
-      Payer en liquide ou par chèque
-
-
-  </body>
+      <p>il me faut plusieurs choses :</p>
+        <ul>
+          <li>une baguette</li>
+          <li>deux <span style="color:red">kilos</span> de tomates</li>
+          <li>3 <span style="color:green">litres</span> de lait</li>
+          <li>5 <span style="font-weight:bold">boites</span> de chewing gum</li>
+        </ul>
+        <em>Payer en liquide ou par chèque</em>
+</body>
 </html>
